<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gpengtao</groupId>
    <artifactId>gpt-code</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <modules>
        <module>gpt-leetcode</module>
        <module>gpt-java</module>
        <module>gpt-utils</module>
        <module>gpt-learn</module>
        <module>gpt-scala</module>
    </modules>

    <properties>
        <!--项目版本-->
        <revision>1.0</revision>
        <!--jdk版本-->
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <!--编码-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--module-->
            <dependency>
                <groupId>com.gpengtao</groupId>
                <artifactId>gpt-utils</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.gpengtao</groupId>
                <artifactId>gpt-java</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.gpengtao</groupId>
                <artifactId>gpt-leetcode</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.gpengtao</groupId>
                <artifactId>gpt-learn</artifactId>
                <version>${revision}</version>
            </dependency>

            <!--apache commons组件-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.12.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.4</version>
            </dependency>

            <!--guava-->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>31.1-jre</version>
            </dependency>

            <!--lombok-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.24</version>
                <scope>provided</scope>
            </dependency>

            <!--test-->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>8</source>
                        <target>8</target>
                        <encoding>UTF8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
